--- a/app/.env.example
+++ b/app/.env.example
@@ -10,7 +10,7 @@ OPENAI_API_KEY=sua_chave_api_aqui
 
 # Configurações do Banco de Dados MongoDB
 MONGO_URI=sua_uri_mongodb_aqui
-DB_NAME=minhacolect
+DB_NAME=Cotacao_Seguros
 
 # Configurações do Flask
 FLASK_APP=wsgi:app
