--- a/requirements.txt
+++ b/requirements.txt
@@ -12,3 +12,7 @@ MarkupSafe==2.1.3
 itsdangerous==2.1.2
 blinker==1.6.2
 click==8.1.7
+selenium==4.15.0
+webdriver-manager==4.0.1
+pyotp==2.9.0
+bson==0.5.10
