--- a/.env.example
+++ b/.env.example
@@ -1,26 +1,35 @@
-# Variáveis de Ambiente para o Projeto WhatsApp Handoff no Render
+# Configurações do Flask
+FLASK_SECRET_KEY=your-super-secret-key-here
+FLASK_DEBUG=True
+PORT=5000
+BASE_URL=https://your-domain.com
+
+# Configurações do MongoDB
+MONGO_URI=mongodb://localhost:27017/
+DB_NAME=whatsapp_insurance_bot
+
+# Configurações do Twilio
+TWILIO_ACCOUNT_SID=your_twilio_account_sid
+TWILIO_AUTH_TOKEN=your_twilio_auth_token
+TWILIO_WHATSAPP_NUMBER=whatsapp:+14155238886
 
 # Configurações da OpenAI
-OPENAI_API_KEY=sua_chave_api_aqui
+OPENAI_API_KEY=your_openai_api_key
 
-# Configurações do Twilio (Descomentadas quando estiver pronto para produção)
-# TWILIO_ACCOUNT_SID=seu_account_sid_aqui
-# TWILIO_AUTH_TOKEN=seu_auth_token_aqui
-# TWILIO_WHATSAPP_NUMBER=whatsapp:+seu_numero_aqui
+# Configurações do SwissRe (se necessário)
+SWISSRE_EMAIL=equinosseguros@gmail.com
+SWISSRE_PASSWORD=Framar1979$2025
+SWISSRE_TOTP_SECRET=BX35M55BRLO3UIYM
 
-# Configurações do Banco de Dados MongoDB
-MONGO_URI=sua_uri_mongodb_aqui
-DB_NAME=Cotacao_Seguros
+# Configurações de segurança
+JWT_SECRET_KEY=your-jwt-secret-key
+ENCRYPTION_KEY=your-encryption-key
 
-# Configurações do Flask
-FLASK_APP=app:create_app()
-FLASK_DEBUG=False
-FLASK_SECRET_KEY=chave_secreta_muito_forte_para_producao_render_2025
+# Configurações de arquivos
+MAX_FILE_SIZE=10485760  # 10MB
+ALLOWED_EXTENSIONS=pdf,doc,docx,jpg,jpeg,png
 
-# URL Base da Aplicação (será preenchida automaticamente pelo Render)
-# O Render define automaticamente a variável PORT e fornece uma URL HTTPS
-# Não é necessário definir BASE_URL manualmente, será configurado no código
-# BASE_URL=https://seu-app-name.onrender.com
+# Configurações de limpeza automática
+AUTO_CLEANUP_HOURS=24
+CLEANUP_INTERVAL_HOURS=6
 
-# Porta para a aplicação Flask (o Render define automaticamente)
-# PORT=10000
