Fix: Simplificar requirements para Render

--- a/.env.example
+++ b/.env.example
@@ -1,35 +1,62 @@
-# Configurações do Flask
-FLASK_SECRET_KEY=your-super-secret-key-here
-FLASK_DEBUG=True
-PORT=5000
-BASE_URL=https://your-domain.com
+# Configurações do Bot de Cotação de Seguros - UltraMsg
+# Copie este arquivo para .env e configure suas variáveis
 
-# Configurações do MongoDB
-MONGO_URI=mongodb://localhost:27017/
-DB_NAME=whatsapp_insurance_bot
+# === CONFIGURAÇÕES ULTRAMSG (OBRIGATÓRIO) ===
+# Obtenha estes valores em https://user.ultramsg.com/
+ULTRAMSG_INSTANCE_ID=instance135696
+ULTRAMSG_TOKEN=qtnijalhyl2zhydy
 
-# Configurações do Twilio
-TWILIO_ACCOUNT_SID=your_twilio_account_sid
-TWILIO_AUTH_TOKEN=your_twilio_auth_token
-TWILIO_WHATSAPP_NUMBER=whatsapp:+14155238886
+# === CONFIGURAÇÕES OPENAI (OBRIGATÓRIO) ===
+# Necessário para o bot inteligente e transcrição de áudio
+OPENAI_API_KEY=sk-sua-chave-openai-aqui
 
-# Configurações da OpenAI
-OPENAI_API_KEY=your_openai_api_key
+# === CONFIGURAÇÕES FLASK (OBRIGATÓRIO) ===
+FLASK_SECRET_KEY=sua-chave-secreta-super-segura-aqui
+FLASK_DEBUG=False
+PORT=8080
 
-# Configurações do SwissRe (se necessário)
-SWISSRE_EMAIL=equinosseguros@gmail.com
-SWISSRE_PASSWORD=Framar1979$2025
-SWISSRE_TOTP_SECRET=BX35M55BRLO3UIYM
+# === URL BASE (OBRIGATÓRIO) ===
+# URL onde sua aplicação está hospedada
+BASE_URL=https://seu-app.onrender.com
 
-# Configurações de segurança
-JWT_SECRET_KEY=your-jwt-secret-key
-ENCRYPTION_KEY=your-encryption-key
+# === CONFIGURAÇÕES MONGODB (OBRIGATÓRIO) ===
+# Banco de dados para armazenar conversas e dados
+MONGO_URI=mongodb+srv://usuario:senha@cluster.mongodb.net/whatsapp_insurance_bot?retryWrites=true&w=majority
 
-# Configurações de arquivos
-MAX_FILE_SIZE=10485760  # 10MB
-ALLOWED_EXTENSIONS=pdf,doc,docx,jpg,jpeg,png
+# === CONFIGURAÇÕES CLOUDINARY (OPCIONAL) ===
+# Para upload de arquivos (PDFs, imagens, áudios)
+# Se não configurado, usará URLs locais
+CLOUDINARY_CLOUD_NAME=seu_cloud_name
+CLOUDINARY_API_KEY=sua_api_key
+CLOUDINARY_API_SECRET=sua_api_secret
 
-# Configurações de limpeza automática
-AUTO_CLEANUP_HOURS=24
-CLEANUP_INTERVAL_HOURS=6
+# === CONFIGURAÇÕES DO PAINEL DE AGENTE (OPCIONAL) ===
+# Agentes que podem acessar o painel de monitoramento
+AGENTS=agent1,agent2
+
+# Agente 1
+AGENT_agent1_EMAIL=agent1@equinos.com
+AGENT_agent1_NAME=Agente Um
+AGENT_agent1_PASSWORD=senha123
+
+# Agente 2  
+AGENT_agent2_EMAIL=agent2@equinos.com
+AGENT_agent2_NAME=Agente Dois
+AGENT_agent2_PASSWORD=senha456
+
+# === CONFIGURAÇÕES SWISSRE (OPCIONAL) ===
+# Configurações para automação do sistema SwissRe
+SWISSRE_LOGIN_URL=https://sistema.swissre.com/login
+SWISSRE_USERNAME=seu_usuario_swissre
+SWISSRE_PASSWORD=sua_senha_swissre
+SWISSRE_HEADLESS=True
+
+# === CONFIGURAÇÕES DE ÁUDIO (OPCIONAL) ===
+# Para geração de áudio das respostas do bot
+TTS_ENABLED=True
+TTS_LANGUAGE=pt-BR
+
+# === CONFIGURAÇÕES DE LOG (OPCIONAL) ===
+LOG_LEVEL=INFO
+LOG_FORMAT=%(asctime)s - %(name)s - %(levelname)s - %(message)s
 
