--- a/requirements.txt
+++ b/requirements.txt
@@ -11,3 +11,10 @@ cloudinary==1.36.0
 python-dateutil==2.8.2
 gtts==2.4.0
 phonenumbers==8.13.26
+dnspython==2.4.2
+Werkzeug==2.3.7
+itsdangerous==2.1.2
+Jinja2==3.1.2
+MarkupSafe==2.1.3
+click==8.1.7
+blinker==1.6.3
