--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,4 @@
-# Dependências mínimas para o Bot UltraMsg
-# Versão ultra-simplificada para resolver problemas de deploy
-
+# Dependências
 flask==3.0.0
 gunicorn==21.2.0
 requests==2.31.0
